# advent-of-code

./: '  README.md
_2020/: Cargo.toml
_2020/data/: day_6.txt
_2020/src/: day_01.rs  day_05.rs  day_06.rs  day_07.rs  day_1.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  main.rs  solution.rs  trailing.rs
_2021/: Cargo.toml
_2021/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  main.rs  solution.rs  trailing.rs
_2022/: Cargo.toml
_2022/data/: problem05_cargo.txt
_2022/src/: problem01.rs  problem02.rs  problem03.rs  problem04.rs  problem05.rs  problem06.rs  problem07.rs  problem08.rs  problem09.rs  problem10.rs  problem11.rs
_2025/src/: day_eight.rs  day_five.rs  day_four.rs  day_nine.rs  day_one.rs  day_seven.rs  day_six.rs  day_three.rs  day_two.rs  main.rs
