[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"
authors = ["TylerBloom <tylerbloom2222@gmail.com>"]

[[bin]]
name = "problem01"
path = "src/problem01.rs"
required-features = []

[[bin]]
name = "problem02"
path = "src/problem02.rs"
required-features = []

[[bin]]
name = "problem03"
path = "src/problem03.rs"
required-features = []

[[bin]]
name = "problem04"
path = "src/problem04.rs"
required-features = []

[[bin]]
name = "problem05"
path = "src/problem05.rs"
required-features = []

[dependencies]
